# drf_online_school

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  groups.json  manage.py  pyproject.toml  requirements.txt
drf_online_school/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
materials/: admin.py  models.py  paginators.py  payment.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_course_preview_alter_lesson_preview_payment.py  0002_initial.py  0003_subscription.py
materials/templates/materials/: base.html  course_detail.html  course_list.html  course_update_email.html  home.html  lesson_detail.html  lesson_list.html
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: send_test_email.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username_alter_customuser_groups_and_more.py  0003_payment.py  0004_alter_customuser_managers.py
users/templates/users/: user-profile.html
